# control_cpu

./: .gitignore  .gitmodules  ControlCpu.xpr  Makefile  README.md  SimRoot_behav.wcfg  setpath  sim_top_behav.wcfg  top.prm  videos
ControlCpu.gen/saros/bl1/: bl1.coe
ControlCpu.srcs/: .gitignore
ControlCpu.srcs/VexRiscv/: GenCompuSar.scala  GenCompuSarRiscV.scala  Readme
ControlCpu.srcs/VexRiscv/new/: VexRiscv_ooc.xdc
ControlCpu.srcs/constrs_1/new/: board.xdc
ControlCpu.srcs/cpu_test/new/: SimRoot.sv  test_program.mem
ControlCpu.srcs/saros/: .gitignore  Makefile.am  boot_loader.mem  boot_loader_state.mem  configure.ac  saros.lds  spi.cpp
ControlCpu.srcs/saros/bl1/: Makefile  Makefile.am  bl1.coe  bl1.lds  bl1_start.cpp  crt.s  ddr.cpp  ddr.h  elf_reader.cpp  elf_reader_test.cpp  format.h  gpio.cpp  irq.cpp  irq.h  makemif  memory.h  reg.cpp  stdint.h  uart.cpp  uart.h
ControlCpu.srcs/saros/common/: format.cpp  irq.cpp  reg.cpp  spi.cpp  spi_flash.cpp
ControlCpu.srcs/saros/include/: csr.h  elf_reader.h  gpio.h  hw-params.h  irq.h  memory.h  p1c1.h  reg.h  spi.h  spi_flash.h  spsc.h  uart.h
ControlCpu.srcs/saros/saros/: csr.h  irq.cpp  irq_wrapper.s  start.cpp  uart.cpp  zero.cpp
ControlCpu.srcs/sim_1/: .gitignore
ControlCpu.srcs/sim_1/MT25QU128ABB8E0_VG17/include/: UserData.vh
ControlCpu.srcs/sim_1/new/: ddr3_model.sv  ddr3_model_parameters.vh  sim_top.sv
ControlCpu.srcs/sources_1/VexRiscV/: VexRiscv.v
ControlCpu.srcs/sources_1/ip/blk_mem/: blk_mem.xci
ControlCpu.srcs/sources_1/ip/blk_mem_gen_0/: blk_mem_gen_0.xci
ControlCpu.srcs/sources_1/ip/clk_converter/: clk_converter.xci
ControlCpu.srcs/sources_1/ip/clk_wiz_0/: clk_wiz_0.xci
ControlCpu.srcs/sources_1/ip/mig_ddr/: mig_a.prj  mig_b.prj  mig_ddr.xci
ControlCpu.srcs/sources_1/new/: GenSmallest.scala  VexRiscv.v  bus_width_adjust.sv  byte_selector.sv  cache.sv  clk_converter.sv  freq_div_bus.sv  gpio.sv  io_block.sv  memory.xdc  spi.sv  timer_int_ctrl.sv  top.sv  uart_ctrl.sv
scripts/: gen_cache_metadata.py  make_hex.py
